--- a/package.json
+++ b/package.json
@@ -10,22 +10,27 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@tomtom-international/web-sdk-maps": "^5.64.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
+    "bootstrap-daterangepicker": "^3.1.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.5",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
+    "moment-range": "^4.0.2",
     "mongoose": "^5.10.1",
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
+    "react-bootstrap-daterangepicker": "^7.0.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.3",
     "react-redux": "^7.2.1",
+    "react-responsive-modal": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
