--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-responsive-modal": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-toastify": "^6.1.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
