--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.29.1",
     "moment-range": "^4.0.2",
     "mongoose": "^5.10.1",
+    "multer": "^1.4.2",
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
