--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
     "bootstrap-daterangepicker": "^3.1.0",
+    "datauri": "^3.0.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.5",
     "jquery": "^3.5.1",
